comit on master

--- a/views/news.erb
+++ b/views/news.erb
@@ -7,29 +7,138 @@
 
     <!-- Google Fonts -->
     <!-- Swap out "Roboto" for the font(s) you want to use -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Lobster|Lora|Satisfy&display=swap" rel="stylesheet">
     
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
     <!-- Your own CSS -->
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>News</title>
   </head>
   <body>
 
     <div class="container mt-5">
-      <h1>News</h1>
+    <div class="card">
+    <div class="card-header">
+      <h1>Location = <%= @location %></h1>
     </div>
+    <div class="card-body">
+      <h5 class="card-title"><strong>Latitude & Longitude:</strong> <%= @geocode_lat %>, <%= @geocode_long %></h5>
+      <h5 class="card-text"> <strong>Current Forecast:</strong>
+  <%= "In #{@location}, it is currently #{@current_temperature} degrees and #{@current_summary}." %></h5>
+      <a href="/" class="btn btn-primary">Change Location</a>
+    </div>
+  </div>
+  </div>
+
+
+  <div class="container mt-5">
+<div class="card">
+  <div class="card-header">
+    <h1>Five Day Forecast</h1>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title"><strong>Day 1:</strong> <%=
+"A high temperature of #{@forecast_daily[0]["temperatureHigh"]} and #{@forecast_daily[0]["summary"].downcase}"
+%></h5> 
+<h5>
+<strong>
+Day 2:
+</strong>
+<%="A high temperature of #{@forecast_daily[1]["temperatureHigh"]} and #{@forecast_daily[1]["summary"].downcase}"%>
+</h5>
+<h5>
+<strong>
+Day 3:
+</strong>
+<%="A high temperature of #{@forecast_daily[2]["temperatureHigh"]} and #{@forecast_daily[2]["summary"].downcase}"%>
+</h5>
+<h5>
+<strong>
+Day 4:
+</strong>
+<%="A high temperature of #{@forecast_daily[3]["temperatureHigh"]} and #{@forecast_daily[3]["summary"].downcase}"%>
+</h5>
+<h5>
+<strong>
+Day 5:
+</strong>
+<%="A high temperature of #{@forecast_daily[4]["temperatureHigh"]} and #{@forecast_daily[4]["summary"].downcase}"%>
+</h5>
+
+  </div>
+</div>
+</div>
+
+    </div>
+
+
+             <div class="container mt-5">
+<div>
+<h1>Today's Top Five News Stories</h1>
+</div>
+</div>
+
+<p></p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
+</html>
+
+<div class="container mt-5">
+<div class=row>
+  <div class="col-md-12">
+    <table class="table table-bordered">
+      <tr class=table-headers>
+        <td>
+          TITLE
+        </td>
+        <td>
+          PREVIEW
+        </td>
+        <td>
+          LINK TO ARTICLE
+        </td>
+      </tr>
+      <tr>
+        <td><b>#1: <%=@news_title_1%></b></td>
+        <td><i><%=@news_description_1%></i></td>
+        <td><a class="btn btn-success" href=<%=@news_url_1%>>"Link to Article"</a></td>
+      </tr>
+      <tr>
+        <td><b>#2: <%=@news_title_2%></b></td>
+        <td><i><%=@news_description_2%></i></td>
+        <td><a class="btn btn-success" href=<%=@news_url_2%>>"Link to Article"</a></td>
+      </tr>
+      <tr>
+        <td><b>#3: <%=@news_title_3%></b></td>
+        <td><i><%=@news_description_3%></i></td>
+        <td><a class="btn btn-success" href=<%=@news_url_3%>>"Link to Article"</a></td>
+      </tr>
+      <tr>
+        <td><b>#4: <%=@news_title_4%></b></td>
+        <td><i><%=@news_description_4%></i></td>
+        <td><a class="btn btn-success" href=<%=@news_url_4%>>"Link to Article"</a></td>
+      </tr>
+      <tr>
+        <td><b>#5: <%=@news_title_5%></b></td>
+        <td><i><%=@news_description_5%></i></td>
+        <td><a class="btn btn-success" href=<%=@news_url_5%>>"Link to Article"</a></td>
+      </tr>
+    </table>
+  </div>
+</div>
+</div>
+
   </body>
 </html>
