--- a/views/news.erb
+++ b/views/news.erb
@@ -26,13 +26,12 @@
     <div class="container mt-5">
     <div class="card">
     <div class="card-header">
-      <h1>Location = <%= @location %></h1>
+      <h1>"Evanston" %></h1>
     </div>
     <div class="card-body">
-      <h5 class="card-title"><strong>Latitude & Longitude:</strong> <%= @geocode_lat %>, <%= @geocode_long %></h5>
+      <h5 class="card-title"><strong>"Evanston"</h5>
       <h5 class="card-text"> <strong>Current Forecast:</strong>
-  <%= "In #{@location}, it is currently #{@current_temperature} degrees and #{@current_summary}." %></h5>
-      <a href="/" class="btn btn-primary">Change Location</a>
+  <%= "In Evanston, IL it is currently #{@current_temperature} degrees and #{@current_summary}." %></h5>
     </div>
   </div>
   </div>
@@ -45,31 +44,31 @@
   </div>
   <div class="card-body">
     <h5 class="card-title"><strong>Day 1:</strong> <%=
-"A high temperature of #{@forecast_daily[0]["temperatureHigh"]} and #{@forecast_daily[0]["summary"].downcase}"
+"A daily high temperature of #{@forecast_daily[0]["temp.day"]} and #{@forecast_daily[0]["weather.description"].downcase}"
 %></h5> 
 <h5>
 <strong>
 Day 2:
 </strong>
-<%="A high temperature of #{@forecast_daily[1]["temperatureHigh"]} and #{@forecast_daily[1]["summary"].downcase}"%>
+<%="A daily high temperature of #{@forecast_daily[1]["temp.day"]} and #{@forecast_daily[1]["weather.description"].downcase}"%>
 </h5>
 <h5>
 <strong>
 Day 3:
 </strong>
-<%="A high temperature of #{@forecast_daily[2]["temperatureHigh"]} and #{@forecast_daily[2]["summary"].downcase}"%>
+<%="A daily high temperature of #{@forecast_daily[2]["temp.day"]} and #{@forecast_daily[2]["weather.description"].downcase}"%>
 </h5>
 <h5>
 <strong>
 Day 4:
 </strong>
-<%="A high temperature of #{@forecast_daily[3]["temperatureHigh"]} and #{@forecast_daily[3]["summary"].downcase}"%>
+<%="A daily high temperature of #{@forecast_daily[3]["temp.day"]} and #{@forecast_daily[3]["weather.description"].downcase}"%>
 </h5>
 <h5>
 <strong>
 Day 5:
 </strong>
-<%="A high temperature of #{@forecast_daily[4]["temperatureHigh"]} and #{@forecast_daily[4]["summary"].downcase}"%>
+<%="A daily high temperature of #{@forecast_daily[4]["temp.day"]} and #{@forecast_daily[4]["weather.description"].downcase}"%>
 </h5>
 
   </div>
